--- a/.github/workflows/quality-checks.yml
+++ b/.github/workflows/quality-checks.yml
@@ -88,8 +88,12 @@ jobs:
 
         # Check for trailing whitespace
         echo "Checking trailing whitespace..."
-        if find bin/dwh -name "*.sh" -type f -exec grep -l " $" {} \; 2>/dev/null; then
+        set +e
+        TRAILING_FILES=$(find bin/dwh -name "*.sh" -type f -exec grep -l " $" {} \; 2>/dev/null)
+        set -e
+        if [[ -n "${TRAILING_FILES}" ]]; then
           echo "⚠️  Found trailing whitespace in Analytics scripts"
+          echo "${TRAILING_FILES}"
           exit 1
         else
           echo "✓ No trailing whitespace found"
