feat: add ETL test mode for streamlined testing
- Introduced an ETL_TEST_MODE variable to enable a testing mode that processes only the years 2013-2014, facilitating faster testing while maintaining data integrity.
- Updated the ETL.sh script to reflect the new test mode functionality, including logging messages for both test and production modes.
- Enhanced documentation in etl.properties and help output to inform users about the new test mode and its usage.

--- a/etc/etl.properties
+++ b/etc/etl.properties
@@ -29,6 +29,13 @@ ETL_NOTIFICATION_EMAIL=""
 ETL_PARALLEL_ENABLED=true
 ETL_MAX_PARALLEL_JOBS=4
 
+# Test Mode Configuration
+# If enabled, processes only years 2013-2014 for faster testing
+# This maintains data integrity by processing complete years
+# After test mode, use incremental mode to process remaining years (2015+)
+# Set to false for production (processes all years from 2013 to current)
+ETL_TEST_MODE=false
+
 # Logging Configuration
 ETL_LOG_LEVEL="INFO"
 ETL_AUDIT_ENABLED=true
