feat: enhance local configuration management and setup
- Added local configuration file support by introducing `properties.sh.local` and `etl.properties.local`, allowing users to customize settings without affecting the main configuration.
- Implemented a setup script (`setup-local-config.sh`) to automate the creation of local configuration files from templates, improving user experience for new installations.
- Updated various scripts to load local properties if they exist, ensuring that user-specific settings take precedence over global configurations.
- Enhanced documentation in `README.md` and `SETUP.md` to guide users on setting up local configurations and the priority order of configuration files.
- Updated `.gitignore` to include patterns for local configuration files, preventing them from being tracked by Git.

--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,12 @@ coverage/
 *.test.log
 
 # Configuration files with sensitive data (keep templates)
+etc/properties.sh.local
 etc/properties.sh_local
+etc/etl.properties.local
 etc/etl.properties_local
+etc/*.local
+etc/*_local
 
 # Python
 __pycache__/
