chore: Update configuration file handling and documentation
- Modified .gitignore to include main configuration files (properties.sh, etl.properties) for better security.
- Updated setup instructions in SETUP.md to reflect changes in configuration file creation and usage.
- Removed local configuration files from the repository, ensuring only example templates are versioned.
- Enhanced README.md to clarify the purpose of main configuration files and their management.
- Adjusted setup-local-config.sh to create main configuration files directly from templates, improving user experience.

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,10 @@ coverage/
 *.test.log
 
 # Configuration files with sensitive data (keep templates)
+# Real configuration files (ignored - use .example files as templates)
+etc/properties.sh
+etc/etl.properties
+# Local override files (also ignored)
 etc/properties.sh.local
 etc/properties.sh_local
 etc/etl.properties.local
