refactor: Update default database names in scripts and documentation
- Changed default database names from 'notes' to 'osm_notes' and 'notes_dwh' to 'osm_notes_dwh' across various scripts and documentation for consistency.
- Updated environment variable examples and usage instructions to reflect the new default values, enhancing clarity for users.
- Ensured backward compatibility by maintaining references to legacy variable names where applicable.

--- a/etc/properties.sh.example
+++ b/etc/properties.sh.example
@@ -11,7 +11,7 @@
 # Database configuration.
 # shellcheck disable=SC2034
 if [[ -z "${DBNAME:-}" ]]; then
- declare -r DBNAME="${DBNAME:-notes}"
+ declare -r DBNAME="${DBNAME:-osm_notes}"
 fi
 # shellcheck disable=SC2034
 if [[ -z "${DB_USER:-}" ]]; then
