feat: Enhance database connection verification in ETL workflow and scripts
- Added checks to verify database accessibility before running tests in the GitHub Actions workflow, ensuring a reliable testing environment.
- Improved error handling in the ETL scripts by validating database connections and providing detailed error messages if connections fail.
- Updated mock ETL script to include connection verification, enhancing robustness during test data population.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -83,6 +83,8 @@ jobs:
         psql -c "CREATE EXTENSION IF NOT EXISTS postgis;"
         psql -c "CREATE EXTENSION IF NOT EXISTS btree_gist;"
         psql -c "SELECT version();"
+        # Verify database is accessible
+        psql -c "SELECT current_database(), current_user;"
 
     - name: Run DWH Tests
       env:
@@ -92,7 +94,13 @@ jobs:
         TEST_DBUSER: postgres
         TEST_DBPASSWORD: postgres
         PGPASSWORD: postgres
+        PGHOST: localhost
+        PGPORT: 5432
+        PGUSER: postgres
+        PGDATABASE: dwh
       run: |
+        # Verify database connection before running tests
+        psql -c "SELECT current_database(), current_user;" || exit 1
         ./tests/run_dwh_tests.sh
 
     - name: Run Hybrid ETL Integration Test
