chore: Update quality-checks and tests workflows
- Added a step to upload quality test results in the quality-checks workflow.
- Removed the quality-tests job from the tests workflow, simplifying the overall structure.
- Enhanced error handling in the run_dwh_tests.sh script to verify database connections before executing mock ETL.

--- a/.github/workflows/quality-checks.yml
+++ b/.github/workflows/quality-checks.yml
@@ -132,4 +132,12 @@ jobs:
         echo "- **Analytics Scripts:** bin/dwh/" >> $GITHUB_STEP_SUMMARY
         echo "- **Common Submodule:** lib/osm-common/ (tested in context)" >> $GITHUB_STEP_SUMMARY
 
+    - name: Upload quality test results
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: quality-test-results
+        path: /tmp/quality_test_output.txt
+        if-no-files-found: ignore
+
 
