chore: Update cron job configurations and email notifications in documentation
- Revised cron job examples in `cron_setup.md`, `Deployment_Diagram.md`, and `execution_guide.md` to reflect production paths and environment variables.
- Updated email notification addresses in `properties.sh.example` and `README.md` to use `notes@osm.lat`.
- Enhanced clarity in the cron example by specifying production configurations for logging and temporary file management.
- Adjusted scheduling details for monthly tasks in the cron examples to ensure proper execution timing.

--- a/etc/properties.sh.example
+++ b/etc/properties.sh.example
@@ -30,7 +30,7 @@ if [[ -z "${DB_USER:-}" ]]; then
 fi
 
 # Email configuration for reports.
-declare EMAILS="${EMAILS:-username@domain.com}"
+declare EMAILS="${EMAILS:-notes@osm.lat}"
 
 # OpenStreetMap API configuration.
 # shellcheck disable=SC2034
