--- a/etc/cron.example
+++ b/etc/cron.example
@@ -5,7 +5,7 @@
 #
 # Installation:
 #   1. Copy this file: cp etc/cron.example /tmp/osm-notes-cron
-#   2. Edit paths in the file to match your system
+#   2. Edit paths if needed (default is /home/notes/OSM-Notes-Analytics for production)
 #   3. Install: crontab /tmp/osm-notes-cron
 #   4. Verify: crontab -l
 #
@@ -14,7 +14,7 @@
 # Set environment variables
 SHELL=/bin/bash
 PATH=/usr/local/bin:/usr/bin:/bin
-HOME=/home/your-username
+HOME=/home/notes
 
 # Load environment (adjust path as needed)
 # You may need to source your shell configuration
@@ -26,22 +26,28 @@ HOME=/home/your-username
 
 # Run incremental ETL every 15 minutes
 # This processes only new notes/comments since last run
-*/15 * * * * /path/to/OSM-Notes-Analytics/bin/dwh/cron_etl.sh
+# Uses LOG_LEVEL=INFO for production (change to ERROR for less verbose, DEBUG for debugging)
+# Uses CLEAN=false to keep temporary files for debugging (change to CLEAN=true to save disk space)
+*/15 * * * * export CLEAN=false ; export LOG_LEVEL=INFO ; export DBNAME=notes ; export DB_USER=notes ; /home/notes/OSM-Notes-Analytics/bin/dwh/ETL.sh
 
 # Alternative: Run ETL every hour (if 15 min is too frequent)
-# 0 * * * * /path/to/OSM-Notes-Analytics/bin/dwh/cron_etl.sh
+# 0 * * * * export CLEAN=true ; export LOG_LEVEL=ERROR ; export DBNAME=notes ; export DB_USER=notes ; /home/notes/OSM-Notes-Analytics/bin/dwh/ETL.sh
+
+# Alternative: Production mode (less verbose, cleans temporary files)
+# */15 * * * * export CLEAN=true ; export LOG_LEVEL=ERROR ; export DBNAME=notes ; export DB_USER=notes ; /home/notes/OSM-Notes-Analytics/bin/dwh/ETL.sh
 
 # ==========================================
 # EXPORT TASKS
 # ==========================================
 
-# Monthly: Export CSV files and push to GitHub (1st day of month at 3 AM)
+# Monthly: Export CSV files and push to GitHub (15th day of month at 2 AM)
 # Exports closed notes by country to CSV for AI context
-# 0 3 1 * * /path/to/OSM-Notes-Analytics/bin/dwh/exportAndPushCSVToGitHub.sh >> /var/log/osm-csv-export.log 2>&1
+# Runs on day 15 to ensure ETL has processed all data from previous month
+0 2 15 * * /home/notes/OSM-Notes-Analytics/bin/dwh/exportAndPushCSVToGitHub.sh
 
 # Daily: Export JSON files and push to GitHub (after datamarts update)
 # Exports datamarts to JSON for web viewer consumption
-# 45 2 * * * /path/to/OSM-Notes-Analytics/bin/dwh/exportAndPushJSONToGitHub.sh >> /var/log/osm-json-export.log 2>&1
+# 45 2 * * * /home/notes/OSM-Notes-Analytics/bin/dwh/exportAndPushJSONToGitHub.sh >> /tmp/osm-json-export.log 2>&1
 
 # ==========================================
 # MAINTENANCE TASKS
@@ -75,18 +81,19 @@ HOME=/home/your-username
 # MACHINE LEARNING TASKS
 # ==========================================
 
-# Monthly: Intelligent ML training/retraining (1st day of month at 2 AM)
+# Monthly: Intelligent ML training/retraining (1st day of month at 4 AM)
 # Script automatically detects system state and decides what to do:
 # - No data → do nothing (exits silently)
 # - Facts + dimensions ready → initial training (basic features)
 # - Datamarts populated → full training (all features)
 # - Models exist → retraining (if 10%+ new data or 30+ days old)
+# Runs at 4 AM to ensure ETL has processed data from previous day
 # Takes 30-120 minutes if training is needed
-# Logs go to /tmp/ml_retrain_*.log (or use ML_LOG_FILE env var to customize)
-# 0 2 1 * * /path/to/OSM-Notes-Analytics/bin/dwh/ml_retrain.sh >> /tmp/ml-retrain.log 2>&1
+# Logs go to /tmp/ml-retrain.log
+0 4 1 * * /home/notes/OSM-Notes-Analytics/bin/dwh/ml_retrain.sh >> /tmp/ml-retrain.log 2>&1
 
-# Alternative: Quarterly retraining (1st day of quarter at 2 AM)
-# 0 2 1 */3 * /path/to/OSM-Notes-Analytics/bin/dwh/ml_retrain.sh >> /tmp/ml-retrain.log 2>&1
+# Alternative: Quarterly retraining (1st day of quarter at 4 AM)
+# 0 4 1 */3 * /home/notes/OSM-Notes-Analytics/bin/dwh/ml_retrain.sh >> /tmp/ml-retrain.log 2>&1
 
 # Note: If you need /var/log, create the file first with sudo:
 # sudo touch /var/log/ml-retrain.log
@@ -98,7 +105,7 @@ HOME=/home/your-username
 # ==========================================
 
 # Daily: Run ETL monitor and send report (6 AM)
-# 0 6 * * * /path/to/OSM-Notes-Analytics/bin/dwh/monitor_etl.sh > /tmp/etl_daily_report.txt
+# 0 6 * * * /home/notes/OSM-Notes-Analytics/bin/dwh/monitor_etl.sh > /tmp/etl_daily_report.txt
 
 # Weekly: Generate weekly summary (Mondays at 8 AM)
 # 0 8 * * 1 psql -U postgres -d osm_notes -c "SELECT COUNT(*) as total_facts FROM dwh.facts" >> /tmp/weekly_summary.txt
