chore: Update database name references in documentation and configuration files
- Changed instances of `DBNAME_DWH` from `osm_notes_dwh` to `notes_dwh` across multiple documentation files including `ENVIRONMENT_VARIABLES.md`, `cron_setup.md`, `DWH_Maintenance_Guide.md`, and others for consistency.
- Updated the default value for `DBNAME_DWH` in `properties.sh.example` to reflect the new naming convention.
- Ensured clarity in examples and usage instructions related to database configurations.

--- a/etc/properties.sh.example
+++ b/etc/properties.sh.example
@@ -18,7 +18,7 @@ fi
 # DBNAME is maintained for backward compatibility when both databases are the same
 # shellcheck disable=SC2034
 if [[ -z "${DBNAME_DWH:-}" ]]; then
- DBNAME_DWH="${DBNAME:-osm_notes}"
+ DBNAME_DWH="${DBNAME_DWH:-notes_dwh}"
 fi
 # shellcheck disable=SC2034
 if [[ -z "${DBNAME_INGESTION:-}" ]]; then
