--- a/etc/properties.sh.example
+++ b/etc/properties.sh.example
@@ -11,7 +11,7 @@
 # Database configuration.
 # shellcheck disable=SC2034
 if [[ -z "${DBNAME:-}" ]]; then
- declare -r DBNAME="${DBNAME:-osm_notes}"
+ declare -r DBNAME="${DBNAME:-notes_dwh}"
 fi
 # Database name variables for DWH operations (recommended)
 # DBNAME_DWH and DBNAME_INGESTION are recommended for DWH operations
@@ -22,11 +22,11 @@ if [[ -z "${DBNAME_DWH:-}" ]]; then
 fi
 # shellcheck disable=SC2034
 if [[ -z "${DBNAME_INGESTION:-}" ]]; then
- DBNAME_INGESTION="${DBNAME:-osm_notes}"
+ DBNAME_INGESTION="${DBNAME_INGESTION:-notes_dwh}"
 fi
 # shellcheck disable=SC2034
 if [[ -z "${DB_USER:-}" ]]; then
- declare -r DB_USER="${DB_USER:-myuser}"
+ declare -r DB_USER="${DB_USER:-notes}"
 fi
 
 # Email configuration for reports.
