feat: Enhance JSON export script with locking mechanism and improved logging
- Added a lock file mechanism to prevent concurrent executions of the export script, ensuring data integrity during processing.
- Improved logging for process start time and error handling, providing clearer feedback in case of issues.
- Updated cron example to reflect changes in execution conditions, ensuring the export script runs only after successful ETL completion.

--- a/etc/cron.example
+++ b/etc/cron.example
@@ -45,9 +45,11 @@ HOME=/home/notes
 # Runs on day 15 to ensure ETL has processed all data from previous month
 0 2 15 * * /home/notes/OSM-Notes-Analytics/bin/dwh/exportAndPushCSVToGitHub.sh
 
-# Daily: Export JSON files and push to GitHub (after datamarts update)
+# Daily: Export JSON files and push to GitHub (after ETL completes successfully)
 # Exports datamarts to JSON for web viewer consumption
-# 45 2 * * * /home/notes/OSM-Notes-Analytics/bin/dwh/exportAndPushJSONToGitHub.sh >> /tmp/osm-json-export.log 2>&1
+# Only runs if ETL completed successfully (using && operator)
+# The export script has its own lock file to prevent concurrent executions
+# 45 2 * * * /home/notes/OSM-Notes-Analytics/bin/dwh/ETL.sh && /home/notes/OSM-Notes-Analytics/bin/dwh/exportAndPushJSONToGitHub.sh >> /tmp/osm-json-export.log 2>&1
 
 # ==========================================
 # MAINTENANCE TASKS
