chore: Update default email configuration in properties.sh.example
- Changed the default EMAILS value from 'username@domain.com' to 'notes@osm.lat' for improved clarity and relevance in email notifications.

--- a/etc/properties.sh.example
+++ b/etc/properties.sh.example
@@ -62,7 +62,7 @@ if [[ -z "${FDW_INGESTION_PASSWORD:-}" ]]; then
 fi
 
 # Email configuration for reports.
-declare EMAILS="${EMAILS:-username@domain.com}"
+declare EMAILS="${EMAILS:-notes@osm.lat}"
 
 # OpenStreetMap API configuration.
 # shellcheck disable=SC2034
