chore: Update ETL script and properties for improved error handling and performance
- Updated the ETL script version to 2026-01-07.
- Introduced a failed execution marker to prevent repeated failures during ETL processes.
- Added a new configuration option, ETL_ANALYZE_FDW_TABLES, to control the analysis of foreign tables, enhancing query planning.
- Updated SQL scripts to conditionally analyze foreign tables based on the new configuration, improving performance and error handling.
- Enhanced error logging to provide clearer guidance on resolving issues when failures occur.

--- a/etc/etl.properties.example
+++ b/etc/etl.properties.example
@@ -11,6 +11,10 @@ ETL_BATCH_SIZE=1000
 ETL_COMMIT_INTERVAL=100
 ETL_VACUUM_AFTER_LOAD=true
 ETL_ANALYZE_AFTER_LOAD=true
+# ANALYZE foreign tables during FDW setup (default: false for performance)
+# Setting to true will analyze foreign tables which can take 20+ seconds
+# but improves query planning. Only enable if you experience query performance issues.
+ETL_ANALYZE_FDW_TABLES=false
 
 # Resource Control
 MAX_MEMORY_USAGE=80
