--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y bats postgresql-client
+        sudo apt-get install -y bats postgresql-client gettext-base
 
     - name: Setup test database
       env:
